<resources>
    <string name="app_name">这个方块贼牛皮</string>
    <string name="cancellation">注销</string>
    <string name="begin_game">开始游戏</string>
    <string name="service_name">贵阳一区</string>
    <string name="version_text">假装这个是版号</string>
    <string name="qq_login_text">QQ登陆</string>
    <string name="phone_login_text">手机登陆</string>
    <string name="alert_login_finish_text">关闭</string>
    <string name="alert_login_title_text">登陆</string>
    <string name="alert_login_btn_text">登陆</string>
    <string name="login_phone_text">手机号</string>
    <string name="password_text">密码</string>
    <string name="classic_block_text">经典模式</string>
    <string name="alert_login_register">注册</string>
    <string name="alert_register_title_text">注册</string>
    <string name="register_input_phone_text">请输入手机号</string>
    <string name="register_input_password_text">请输入密码</string>
    <string name="register_input_code_text">请输入验证码</string>
    <string name="register_request_code_btn_text">获取验证码</string>
    <string name="register_commit_btn_text">注册</string>
    <string name="register_input_name_text">请输入昵称</string>
    <string name="interest_block_text">闯关模式</string>
    <string name="battle_block_text">对战模式</string>
    <string name="wealth_rank_text">财富</string>
    <string name="left_text">左移</string>
    <string name="right_text">右移</string>
    <string name="rotate_text">旋转</string>
    <string name="down_text">下移</string>
    <string name="score_text">分数：</string>
    <string name="grade_text">等级：</string>
    <string name="row_num_text">消除行数：</string>
    <string name="max_score_text">最高分：</string>
    <string name="input_name_hint_text">请输入你的名字</string>
    <string name="input_name_true_text">创建角色</string>
    <string name="rush_mode_text">闯关模式</string>
    <string name="_2048_mode_text">2048模式</string>
    <string name="single_player_game_text">单人排位</string>
    <string name="battle_score_text">当前分数</string>
    <string name="zero_initial">0</string>
    <string name="one_initial">1</string>
    <string name="enemy_score_text">对方成绩</string>
    <string name="social_text">社交</string>
    <string name="btnMan_text">男</string>
    <string name="btnWoman_text">女</string>
    <string name="edit_search_text">输入要搜索的名字</string>
    <string name="search_text">搜索</string>
    <string name="friend_management_text">好友管理</string>
    <string name="add_friend_text">添加好友</string>
    <string name="friend_apply_text">好友申请</string>
    <string name="task_text">任务</string>
    <string name="punch_text">签到</string>
    <string name="talk_text">聊天</string>
    <string name="send_text">发送</string>
    <string name="edit_send_text">请输入要发送的内容</string>
    <string name="none_content_text">没有选择聊天会话</string>
    <string name="shop_text">商店</string>
    <string name="knapsack_text">背包</string>
    <string name="attainment_text">成就</string>
    <string name="two_player_game_text">双人排位</string>
    <string name="back_main_page_text">回到主页</string>
    <string name="another_round_text">再来一局</string>
    <string name="fail">失败</string>
    <string name="win_text">胜利</string>
    <string name="promotionFailure_text">晋级失败</string>
    <string name="tips_text">过关消除行数</string>
    <string name="tips_current_text">当前消除行数</string>
    <string name="goods_text">商店</string>
    <string name="pack_text">背包</string>
    <string name="goods_buy_text">购买</string>
    <string name="pack_use_text">使用</string>
    <string name="update_text">修改</string>
    <string name="update_name">修改昵称</string>
    <string name="cancel_text">取消</string>
    <string name="set_up_text">设置</string>
    <string name="swh_text">背景音乐</string>
    <string name="stand_alone_text">单机</string>
    <string name="add_group_text">QQ群</string>
    <string name="room_name_text">房间名</string>
    <string name="refresh_room_text">刷新房间</string>
    <string name="join_room_text">加入房间</string>
    <string name="prepare_text">准备</string>
    <string name="you_name_text">等待进入</string>
    <string name="room_num_text">编号</string>
    <string name="room_list_text">房间列表</string>
    <string name="room_type_text">类型</string>
    <string name="room_user_text">创建者</string>
    <string name="join_game_text">加入游戏</string>
    <string name="create_room_text">创建房间</string>
    <string name="room_name_edit_label">房间名：</string>
    <string name="room_name_edit_text">房间名</string>
    <string name="create_room_page_text">新房间</string>
    <string name="game_type_text_label">游戏类型：</string>
    <string name="player_match_text">单人匹配</string>
    <string name="two_player_rank_text">双人排位</string>
    <string name="create_room_cancel_text">取消</string>
    <string name="create_room_sure_text">创建</string>
</resources>
