<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android ="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <!--动态背景-->
    <include layout="@layout/login_bg"/>
    <!--需要判断情况是否存在token-->

    <!--  手机登陆  -->
    <Button
        android:id="@+id/phone_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_login_text"
        android:layout_above="@+id/login_middle"
        android:layout_toStartOf="@+id/login_middle"
        android:visibility="visible"/>
    <!--  QQ登陆  -->
    <Button
        android:id="@+id/qq_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/qq_login_text"
        android:layout_above="@+id/login_middle"
        android:layout_toEndOf="@+id/login_middle"
        android:visibility="visible"/>

    <!--  区服  -->
    <TextView
        android:id="@+id/district_service"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:layout_above="@id/begin_game"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:background="@color/colorGrayTransparent"
        android:text="@string/service_name"
        android:visibility="invisible"/>
    <!-- 开始游戏 -->
    <Button
        android:id="@+id/begin_game"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/begin_game"
        android:layout_above="@id/bottom_version"
        android:layout_marginBottom="10dp"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"/>

    <!--  登陆用户名  -->
    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:layout_toStartOf="@+id/cancellation"
        android:layout_alignBottom="@+id/cancellation"
        android:gravity="center"
        android:background="@color/colorTransparent"
        android:visibility="invisible"/>
    <!--  注销按钮  -->
    <Button
        android:id="@+id/cancellation"
        android:layout_width="wrap_content"
        android:layout_height="36dp"
        android:text="@string/cancellation"
        android:visibility="invisible"
        android:layout_marginTop="20dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="40dp" />

    <TextView
        android:id="@+id/login_middle"
        android:layout_width="50dp"
        android:layout_height="70dp"
        android:layout_above="@+id/bottom_version"
        android:layout_centerHorizontal="true"/>

    <!--后期版号-->
    <TextView
        android:id="@+id/bottom_version"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center"
        android:text="@string/version_text"
        android:background="@color/colorGrayTransparent"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>