<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@color/colorGrey"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/alert_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@mipmap/ic_calculator_close"
            android:padding="3dp"
            android:contentDescription="@string/alert_login_finish_text" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorGrayTransparent_25"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_centerInParent="true"
            android:text="@string/create_room_page_text"
            tools:ignore="RelativeOverlap" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="5dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/room_name_edit_label"/>
            <EditText
                android:id="@+id/room_name_edit"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/bg_frame_search"
                android:layout_gravity="center_vertical"
                android:hint="@string/room_name_edit_text"
                android:maxLength="20"
                android:padding="5dp"
                android:ellipsize="end"
                android:lines="1"
                android:inputType="text"
                android:importantForAutofill="no" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:gravity="center"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorBlack"
                android:textSize="15sp"
                android:text="@string/game_type_text_label"/>
            <RadioGroup
                android:id="@+id/radioGroup_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/two_player_rank"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_player_rank_text"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/player_match"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="15dp"
                    android:text="@string/player_match_text"/>
            </RadioGroup>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/create_room_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/btn_white"
                android:text="@string/create_room_cancel_text"
                tools:ignore="ButtonStyle" />
            <Button
                android:id="@+id/create_room_sure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@drawable/btn_white"
                android:text="@string/create_room_sure_text"
                tools:ignore="ButtonStyle" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>