<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="horizontal"
    android:layout_width="match_parent"
    android:padding="4dp"
    android:layout_height="45dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView
        android:id="@+id/room_num"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:text="@string/room_num_text"
        android:layout_weight="1">
    </TextView>
    <TextView
        android:id="@+id/room_name"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:layout_gravity="center"
        android:text="@string/room_name_text"
        android:layout_weight="1">
    </TextView>
    <TextView
        android:id="@+id/room_type"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:textSize="14sp"
        android:layout_gravity="center"
        android:textColor="@color/colorBlack"
        android:text="@string/room_type_text"
        android:layout_weight="1">
    </TextView>
    <TextView
        android:id="@+id/room_user"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:textSize="14sp"
        android:textColor="@color/colorBlack"
        android:text="@string/room_user_text"
        android:layout_gravity="center"
        android:layout_weight="1">
    </TextView>
</LinearLayout>
