<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorGrayTransparent_25"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/btnMan"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnMan_text"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/btnWoman"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnWoman_text"/>
        </RadioGroup>

        <EditText
            android:id="@+id/edit_search"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="32dp"
            android:layout_margin="10dp"
            android:background="@drawable/bg_frame_search"
            android:hint="@string/edit_search_text"
            android:maxLength="20"
            android:padding="5dp"
            android:ellipsize="end"
            android:lines="1"
            android:inputType="text"
            android:importantForAutofill="no" />

        <Button
            android:id="@+id/search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text"/>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_recycler_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </androidx.recyclerview.widget.RecyclerView>
</LinearLayout>