<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/colorBlack"
        android:layout_weight="2.2">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_centerInParent="true"
            android:background="@mipmap/fail"
            android:contentDescription="@string/app_name" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/win_text"
            android:textSize="10pt"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/blue"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/winRecyclerView"
            android:background="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:layout_weight="3.5">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/fail"
            android:textSize="10pt"
            android:gravity="center_vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:background="@color/colorRed"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/defeatedRecyclerView"
            android:background="@color/colorBlack"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/black_20"
        android:padding="5dp"
        android:layout_weight="0.8">
        <Button
            android:id="@+id/back_main_page"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toStartOf="@+id/view"
            android:background="@drawable/btn_white"
            android:text="@string/back_main_page_text"/>
        <View
            android:id="@+id/view"
            android:layout_width="5dp"
            android:layout_height="5dp"
            android:layout_centerInParent="true"/>
        <Button
            android:id="@+id/another_round"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_toEndOf="@+id/view"
            android:background="@drawable/btn_white"
            android:text="@string/another_round_text"/>
    </RelativeLayout>
</LinearLayout>