<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:background="@drawable/shape_radian_dialog_white"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/alert_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="15dp"
            android:text="@string/alert_login_title_text"
            android:textColor="#525b6c"
            android:textSize="26sp"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/alert_login_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="12dp"
            android:background="@mipmap/ic_calculator_close"
            android:padding="3dp"
            android:contentDescription="@string/alert_login_finish_text" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/user"
                android:contentDescription="帐号"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/phone_number"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/login_phone_text"
                android:ems="11"
                android:textColorHint="#95A1AA"
                android:singleLine="true"
                android:inputType="phone"
                android:importantForAutofill="no"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp">
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@mipmap/password"
                android:contentDescription="密码"
                android:singleLine="true"
                tools:ignore="HardcodedText" />

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/password_text"
                android:textColorHint="#95A1AA"
                android:inputType="textPassword"
                android:importantForAutofill="no"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/alert_login_btn"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_red_background"
        android:text="@string/alert_login_btn_text"
        android:textColor="#ffffff"
        android:textSize="16sp" />

    <Button
        android:id="@+id/alert_login_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:text="@string/alert_login_register"/>
</LinearLayout>
