<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="500dp"
    android:layout_gravity="center"
    android:background="@color/colorGrey"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="85dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:textSize="10pt"
            android:text="@string/room_list_text"
            tools:ignore="RelativeOverlap" />

        <ImageView
            android:id="@+id/alert_finish"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:background="@mipmap/ic_calculator_close"
            android:padding="3dp"
            android:contentDescription="@string/alert_login_finish_text" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/colorGrayTransparent_50"
        android:layout_height="2dp"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@drawable/shape_radian_dialog_white"
        android:layout_height="360dp">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/room_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:background="@color/colorGrayTransparent_50"
        android:layout_height="2dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="end"
        android:orientation="horizontal">

        <Button
            android:id="@+id/refresh_room"
            android:layout_width="70dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_white"
            android:layout_height="38dp"
            android:text="@string/refresh_room_text"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/join_room"
            android:layout_width="70dp"
            android:layout_marginEnd="10dp"
            android:layout_gravity="center_vertical"
            android:background="@drawable/btn_white"
            android:layout_height="38dp"
            android:text="@string/join_room_text"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>